<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/feedFragment"
        android:contentDescription="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:iconTint="@color/black"
        android:title="@string/home" />

    <item
        android:id="@+id/newRecipeFragment"
        android:contentDescription="@string/new_recipe"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:iconTint="@color/black"
        android:title="@string/new_recipe" />

    <item
        android:id="@+id/favoritesFragment"
        android:contentDescription="@string/favorites"
        android:icon="@drawable/ic_favorite_48"
        android:iconTint="@color/black"
        android:title="@string/favorites" />
</menu>