<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/RecipeImageView"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="24dp"
        app:riv_tile_mode="clamp"
        tools:src="@drawable/no_image_photo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menuImageButton"
        style="@style/Widget.AppTheme.BasicIconStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/description_action_with_recipe"
        android:src="@drawable/ic_more_vert_48dp"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="@+id/RecipeImageView"
        app:layout_constraintTop_toTopOf="@+id/RecipeImageView"
        app:tint="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="24dp"
        android:background="@color/hard_transparent_black"
        app:layout_constraintBottom_toBottomOf="@+id/RecipeImageView"
        app:layout_constraintEnd_toEndOf="@+id/RecipeImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/RecipeImageView">


        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            tools:text="@string/title_recipe" />

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="@string/category"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textViewName"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" />

        <TextView
            android:id="@+id/textViewCategoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textViewCategory"
            app:layout_constraintTop_toBottomOf="@+id/textViewCategory"
            tools:text="@string/category_eastern" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/starsConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/RecipeImageView"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favoriteImageButton"
            style="@style/Widget.AppTheme.FavoriteCheckBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/small_common_spacing"
            android:checkable="true"
            app:icon="@drawable/ic_favorite_48dp"
            app:layoutDescription="@string/description_add_to_favorites"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>