<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:background="@color/base_yellow"
                android:contentDescription="@string/description_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/common_spacing">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="288dp"
                    android:scaleType="centerCrop"
                    app:layout_anchor="@+id/uploadButton"
                    app:layout_anchorGravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:riv_corner_radius="24dp"
                    app:riv_tile_mode="clamp"
                    tools:src="@drawable/no_image_photo" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/uploadButton"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_upload_image"
                    android:outlineSpotShadowColor="@android:color/transparent"
                    app:backgroundTint="@color/low_transparent_black"
                    app:fabCustomSize="72dp"
                    app:layout_anchorGravity="center"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    app:maxImageSize="48dp"
                    app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24"
                    app:tint="@color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldRecipeName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_spacing"
                    android:hint="@string/title_recipe"
                    app:layoutDescription="@string/title_recipe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextRecipeAuthor"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/author"
                    app:layoutDescription="@string/author"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldRecipeName">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/authorTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/menu"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category_select"
                    app:layoutDescription="@string/category_select"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/outlinedTextRecipeAuthor">

                    <AutoCompleteTextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextRecipeStep"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/instructions"
                    app:layoutDescription="@string/instructions"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/menu">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/stepTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_spacing"
                    android:backgroundTint="@color/base_yellow"
                    android:contentDescription="@string/save"
                    android:text="@string/save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outlinedTextRecipeStep" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

