<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/recipeImageView"
                android:layout_width="match_parent"
                android:layout_height="440dp"
                android:contentDescription="image"
                android:scaleType="centerCrop"
                android:src="@drawable/no_image_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/gradient"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:src="@drawable/gradient_shape"
                app:layout_constraintBottom_toBottomOf="@id/recipeImageView"
                app:layout_constraintEnd_toEndOf="@+id/recipeImageView"
                app:layout_constraintStart_toStartOf="parent" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/roundedFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"
                android:scaleType="centerCrop"
                android:src="@drawable/white_blank"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/gradient"
                app:riv_corner_radius="24dp"
                app:riv_tile_mode="clamp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"
                android:backgroundTint="@color/base_yellow"
                android:contentDescription="@string/start_cooking"
                android:fontFamily="@font/caveat_semi_bold"
                android:text="@string/start_cooking"
                app:cornerRadius="24dp"
                app:layout_constraintEnd_toEndOf="@id/roundedFrame"
                app:layout_constraintStart_toStartOf="@id/roundedFrame"
                app:layout_constraintTop_toBottomOf="@id/materials" />


            <TextView
                android:id="@+id/titleRecipeView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/roundedFrame"
                app:layout_constraintStart_toStartOf="@id/roundedFrame"
                app:layout_constraintTop_toTopOf="@+id/roundedFrame"
                tools:text="@string/title_recipe" />

            <TextView
                android:id="@+id/categoryView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/roundedFrame"
                app:layout_constraintStart_toStartOf="@+id/roundedFrame"
                app:layout_constraintTop_toBottomOf="@+id/titleRecipeView"
                tools:text="@string/category" />

            <TextView
                android:id="@+id/materials"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginTop="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"
                android:gravity="start"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/roundedFrame"
                app:layout_constraintStart_toStartOf="@id/roundedFrame"
                app:layout_constraintTop_toBottomOf="@id/categoryView"
                tools:text="Ingredients" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/closeButton"
                style="@style/Widget.AppTheme.BasicIconStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"
                android:contentDescription="@string/close"
                android:src="@drawable/ic_baseline_close_24"
                app:fabSize="mini"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/favoriteImageButton"
                style="@style/Widget.AppTheme.FavoriteCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:contentDescription="@string/description_add_to_favorites"
                app:icon="@drawable/ic_favorite_48dp"
                app:iconSize="60dp"
                app:layout_constraintBottom_toTopOf="@+id/gradient"
                app:layout_constraintEnd_toEndOf="@id/roundedFrame"
                app:layout_constraintTop_toTopOf="@id/roundedFrame" />

            <TextView
                android:id="@+id/contentView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginTop="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"
                android:gravity="center"
                android:text="@string/instructions"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/roundedFrame"
                app:layout_constraintStart_toStartOf="@id/roundedFrame"
                app:layout_constraintTop_toBottomOf="@id/startButton"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="459dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>